[tool.poetry]
name = "phonebook"
version = "0.1.0"
description = ""
authors = ["Kakkengal, Faris Kamal <faris.kamal.kakkengal@intel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
